--- a/examples/html-analyze/requirements.txt
+++ b/examples/html-analyze/requirements.txt
@@ -4,9 +4,54 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
+appnope==0.1.0            # via ipython
+attrs==17.4.0             # via pytest
 beautifulsoup4==4.6.0
-numpy==1.13.3             # via pandas
+bleach==2.1.2             # via nbconvert
+cycler==0.10.0            # via matplotlib
+decorator==4.1.2          # via ipython, traitlets
+entrypoints==0.2.3        # via nbconvert
+html5lib==1.0.1           # via bleach
+ipykernel==4.7.0          # via ipywidgets, jupyter, jupyter-console, notebook, qtconsole
+ipython-genutils==0.2.0   # via nbformat, notebook, qtconsole, traitlets
+ipython==6.2.1            # via ipykernel, ipywidgets, jupyter-console
+ipywidgets==7.1.0         # via jupyter
+jedi==0.11.1              # via ipython
+jinja2==2.10              # via nbconvert, notebook
+jsonschema==2.6.0         # via nbformat
+jupyter-client==5.2.0     # via ipykernel, jupyter-console, notebook, qtconsole
+jupyter-console==5.2.0    # via jupyter
+jupyter-core==4.4.0       # via jupyter-client, nbconvert, nbformat, notebook, qtconsole
+jupyter==1.0.0
+markupsafe==1.0           # via jinja2
+matplotlib==2.1.1
+mistune==0.8.3            # via nbconvert
+nbconvert==5.3.1          # via jupyter, notebook
+nbformat==4.4.0           # via ipywidgets, nbconvert, notebook
+notebook==5.2.2           # via jupyter, widgetsnbextension
+numpy==1.13.3             # via matplotlib, pandas
 pandas==0.21.1
-python-dateutil==2.6.1    # via pandas
-pytz==2017.3              # via pandas
-six==1.11.0               # via python-dateutil
+pandocfilters==1.4.2      # via nbconvert
+parso==0.1.1              # via jedi
+pexpect==4.3.1            # via ipython
+pickleshare==0.7.4        # via ipython
+pluggy==0.6.0             # via pytest
+prompt-toolkit==1.0.15    # via ipython, jupyter-console
+ptyprocess==0.5.2         # via pexpect, terminado
+py==1.5.2                 # via pytest
+pygments==2.2.0           # via ipython, jupyter-console, nbconvert, qtconsole
+pyparsing==2.2.0          # via matplotlib
+pytest==3.3.1             # via jupyter-client
+python-dateutil==2.6.1    # via jupyter-client, matplotlib, pandas
+pytz==2017.3              # via matplotlib, pandas
+pyzmq==16.0.3             # via jupyter-client
+qtconsole==4.3.1          # via jupyter
+simplegeneric==0.8.1      # via ipython
+six==1.11.0               # via bleach, cycler, html5lib, matplotlib, prompt-toolkit, pytest, python-dateutil, traitlets
+terminado==0.8.1          # via notebook
+testpath==0.3.1           # via nbconvert
+tornado==4.5.2            # via ipykernel, notebook, terminado
+traitlets==4.3.2          # via ipykernel, ipython, ipywidgets, jupyter-client, jupyter-core, nbconvert, nbformat, notebook, qtconsole
+wcwidth==0.1.7            # via prompt-toolkit
+webencodings==0.5.1       # via html5lib
+widgetsnbextension==3.1.0  # via ipywidgets
